[metadata]
name = hhcm_forest
version = 1.1.19
author = Arturo Laurenzi
author_email = arturo.laurenzi@iit.it
description = A minimalistic tool to automate source code cloning and building
long_description = file: README.md
long_description_content_type = text/markdown
url = https://none
project_urls =
    Bug Tracker = https://none
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
include_package_data = True
python_requires = >=3.6
install_requires =
    argcomplete
    parse
    pyyaml
    psutil
    progressbar
    

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    forest = forest.main:main
